Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7404

REPAIR multiple tables crash in MDL_ticket::has_stronger_or_equal_type

    XMLWordPrintable

Details

    Description

      Release build crash:

      Version: '10.0.15-MariaDB'  socket: ''  port: 3306  MariaDB Server
      150102 17:56:41 [ERROR] mysqld got exception 0xc0000005 ;
       
      mysqld.exe!MDL_ticket::has_stronger_or_equal_type()[mdl.cc:1965]
      mysqld.exe!MDL_context::upgrade_shared_lock()[mdl.cc:2556]
      mysqld.exe!wait_while_table_is_used()[sql_base.cc:1781]
      mysqld.exe!mysql_admin_table()[sql_admin.cc:604]
      mysqld.exe!Sql_cmd_repair_table::execute()[sql_admin.cc:1237]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:5078]
      mysqld.exe!mysql_parse()[sql_parse.cc:6407]
      mysqld.exe!dispatch_command()[sql_parse.cc:1299]
      mysqld.exe!do_command()[sql_parse.cc:996]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:233]
      mysqld.exe!io_completion_callback()[threadpool_win.cc:568]

      Debug build assertion:

      Version: '10.0.15-MariaDB-debug'  socket: ''  port: 3306  MariaDB Server
      Assertion failed: !table_list->next_global, file ..\..\sql\sql_table.cc, line 9542
       
      mysqld.exe!my_sigabrt_handler()[my_thr_init.c:475]
      mysqld.exe!raise()[winsig.c:587]
      mysqld.exe!abort()[abort.c:75]
      mysqld.exe!_wassert()[assert.c:156]
      mysqld.exe!mysql_recreate_table()[sql_table.cc:9542]
      mysqld.exe!admin_recreate_table()[sql_admin.cc:58]
      mysqld.exe!mysql_admin_table()[sql_admin.cc:760]
      mysqld.exe!Sql_cmd_repair_table::execute()[sql_admin.cc:1237]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:5078]
      mysqld.exe!mysql_parse()[sql_parse.cc:6407]
      mysqld.exe!dispatch_command()[sql_parse.cc:1299]
      mysqld.exe!do_command()[sql_parse.cc:996]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:233]
      mysqld.exe!io_completion_callback()[threadpool_win.cc:568]

      How to Repeat
      --------------------

      drop table if exists `t1`,`t2`,`t3`;
      create table `t1`(`a` int) engine=innodb partition by key (`a`);
      create table `t2`(`b` int) engine=innodb;
      create table `t3`(`c` int) engine=innodb;
      repair table `t1`,`t2`,`t3`;

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 40m
                40m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.