MDEV-7404 REPAIR multiple tables crash in MDL_ticket::has_stronger_or_equal_type

mysql_alter_table() that is used in mysql_recreate_table() doesn't expect
many tables in the TABLE_LIST.